testcases/error/vardecl.cpp
unsigned unsigned int a;
short long int b;
float double c;
